Additional login operations

--- a/BauBuddyTaskApp/Support/Base.lproj/Main.storyboard
+++ b/BauBuddyTaskApp/Support/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Login View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginView" customModule="BauBuddyTaskApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginView" id="BYZ-38-t0r" customClass="LoginView" customModule="BauBuddyTaskApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -85,7 +85,7 @@
         <!--Tasks-->
         <scene sceneID="AZl-vU-DN3">
             <objects>
-                <viewController id="hBB-K6-Dh7" customClass="TaskListView" customModule="BauBuddyTaskApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TaskListView" id="hBB-K6-Dh7" customClass="TaskListView" customModule="BauBuddyTaskApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="B6k-gZ-y8v">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -95,7 +95,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="450" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="r4S-70-Lhg">
-                                <rect key="frame" x="0.0" y="84" width="393" height="754"/>
+                                <rect key="frame" x="0.0" y="84" width="393" height="705"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TaskCell" id="pbS-Et-cQO" customClass="TaskCell" customModule="BauBuddyTaskApp" customModuleProvider="target">
@@ -246,7 +246,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="iYz-wv-cUO">
             <objects>
-                <tabBarController id="vfS-Wd-udk" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBar" id="vfS-Wd-udk" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="AWh-As-vTz">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -263,7 +263,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="J4B-wY-V3q"/>
+        <segue reference="aDr-c8-c55"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="checklist.checked" catalog="system" width="128" height="107"/>
