--- a/BauBuddyTaskApp/Support/Base.lproj/Main.storyboard
+++ b/BauBuddyTaskApp/Support/Base.lproj/Main.storyboard
@@ -18,39 +18,64 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MAc-E2-MEO">
-                                <rect key="frame" x="57" y="164" width="287" height="34"/>
+                                <rect key="frame" x="34" y="322" width="324" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oa3-pB-zGI">
-                                <rect key="frame" x="57" y="235" width="287" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1KG-cz-8ZG">
-                                <rect key="frame" x="138" y="306" width="117" height="51"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon2" translatesAutoresizingMaskIntoConstraints="NO" id="MMB-w8-w4S">
+                                <rect key="frame" x="124" y="166" width="145" height="120"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="51" id="scu-Lr-VaW"/>
+                                    <constraint firstAttribute="height" constant="120" id="c1D-VC-Xh9"/>
+                                    <constraint firstAttribute="width" constant="145" id="s6w-Q2-1ns"/>
                                 </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3xa-di-PpY">
+                                <rect key="frame" x="90" y="455" width="213" height="43"/>
+                                <color key="backgroundColor" red="0.22352941176470587" green="0.5725490196078431" blue="0.79607843137254897" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="CMT-b1-k7S"/>
+                                    <constraint firstAttribute="width" constant="213" id="g6F-ZW-7CO"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Login"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Login">
+                                            <attributes>
+                                                <font key="NSFont" size="18" name="Helvetica-Bold"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </buttonConfiguration>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.CornerRadius" value="20"/>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="loginButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fKf-de-DvF"/>
+                                    <action selector="loginClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xwT-c5-85M"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oa3-pB-zGI">
+                                <rect key="frame" x="34" y="386" width="324" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="1KG-cz-8ZG" firstAttribute="top" secondItem="Oa3-pB-zGI" secondAttribute="bottom" constant="37" id="ImY-c5-AY9"/>
-                            <constraint firstItem="Oa3-pB-zGI" firstAttribute="top" secondItem="MAc-E2-MEO" secondAttribute="bottom" constant="37" id="KB3-KC-5A4"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MAc-E2-MEO" secondAttribute="trailing" constant="49" id="Se7-I2-NE4"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Oa3-pB-zGI" secondAttribute="trailing" constant="49" id="Vei-5c-vap"/>
-                            <constraint firstItem="Oa3-pB-zGI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="57" id="YED-gW-aI9"/>
-                            <constraint firstItem="MAc-E2-MEO" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="105" id="bxL-m1-D7f"/>
-                            <constraint firstItem="1KG-cz-8ZG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cjK-5E-fcE"/>
-                            <constraint firstItem="1KG-cz-8ZG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="138" id="e9s-uJ-Mp2"/>
-                            <constraint firstItem="MAc-E2-MEO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="57" id="owm-B6-MmF"/>
+                            <constraint firstItem="MMB-w8-w4S" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="124" id="89y-Y0-epN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Oa3-pB-zGI" secondAttribute="trailing" constant="35" id="8c6-1x-Vx0"/>
+                            <constraint firstItem="Oa3-pB-zGI" firstAttribute="top" secondItem="MAc-E2-MEO" secondAttribute="bottom" constant="30" id="FBu-6s-9SA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MAc-E2-MEO" secondAttribute="trailing" constant="35" id="PQL-91-3dm"/>
+                            <constraint firstItem="Oa3-pB-zGI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="34" id="TQR-eI-H3P"/>
+                            <constraint firstItem="MMB-w8-w4S" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="107" id="YcO-q9-4mj"/>
+                            <constraint firstItem="3xa-di-PpY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="90" id="bF8-hf-yIj"/>
+                            <constraint firstItem="MAc-E2-MEO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="34" id="bQA-Tj-3u3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3xa-di-PpY" secondAttribute="trailing" constant="90" id="fXh-cF-yKX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MMB-w8-w4S" secondAttribute="trailing" constant="124" id="gSS-gu-ymb"/>
+                            <constraint firstItem="MAc-E2-MEO" firstAttribute="top" secondItem="MMB-w8-w4S" secondAttribute="bottom" constant="36" id="qAv-nN-wjh"/>
+                            <constraint firstItem="3xa-di-PpY" firstAttribute="top" secondItem="Oa3-pB-zGI" secondAttribute="bottom" constant="35" id="qF0-bN-3Cw"/>
                         </constraints>
                     </view>
                     <connections>
@@ -267,6 +292,7 @@
     </inferredMetricsTieBreakers>
     <resources>
         <image name="checklist.checked" catalog="system" width="128" height="107"/>
+        <image name="icon2" width="512" height="512"/>
         <image name="qrcode" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
